# llm-finetune

./: .gitignore  README.md  app.py  pyproject.toml
src/: dataset.py  lora.py  model.py  predictor.py  train.py
